# raven

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  0001-perf-Connected-RAVEN-to-Microsoft-Azure-database.patch  0002-chore-cleaning-up-credentials-building-towards-cosmo.patch  0003-chore-major-upgrades-to-ensure-unneeded-files-are-no.patch  0004-chore-removing-unnecessary-files-cleaning-up-Git-con.patch  0005-chore-establishing-cosmosdb-write-for-dummy-data.patch  0006-.patch  0007-chore-comparing-datasets-across-APIs.patch  0008-.patch  0009-chore-adding-OpenWeatherMap-to-scrape.patch  0010-chore-stood-up-current-wx-via-OpenMeteo.patch  0011-chore-beginning-to-write-wx-data-to-cosmosdb.patch  0012-chore-modularizing.patch  0013-chore-towards-modularity.patch  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: release.yml
.github/workflows/: auto-tag.yml  auto-version.yml  python-app.yml
docs/: api-reference.md  api_keys.json  conf.py  developer-guide.md  http-codes.md  index.md  requirements.txt  units.md  user-guide.md  weather-codes.md
docs/_static/: json_template.json  wx_params.xlsx
docs/_static/response_samples/: aviation_weather.json  visual_crossing.json
examples/: METAR list to dataframe.ipynb  Untitled.ipynb  Weather_check.ipynb  run.py
modules/weather/: collection.py
src/raven/core/: api_base.py  date_time.py  file_io.py  location.py
src/raven/modules/weather/: __init__.py  accu_weather.py  aviation_wx.py  collection.py  meteo_stat.py  open_meteo.py  open_weather.py  synoptic_data.py  tomorrow_io.py  visual_crossing.py  weather_api.py
tests/test_base/: conftest.py  test_base.py
