[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raven"
version = "0.1.0"
description = "Environmental Analysis Platform"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "config",
    "pandas",
    "fastapi",
    "requests",
    "psycopg2",
    "ipykernel",
    "pip==25.0.1",
    "azure-cosmos",
    "types-requests",
    "black[jupyter]"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["raven"]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "sphinx",
    "pytest",
    "ipykernel",
    "pytest-cov",
    "myst-parser",
    "sphinx-rtd-theme",
]


