[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raven"
version = "0.1.0"
description = "Environmental Analysis Platform"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "config",
    "pandas",
    "fastapi",
    "requests",
    "psycopg2",
    "ipykernel",
    "pip==25.0.1",
    "azure-cosmos",
    "azure-storage-blob",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-mgmt-resource",
    "pandas-stubs",
    "black[jupyter]",
    "types-requests",
    "requests_cache",
    "retry_requests",
    "openmeteo_requests"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["raven"]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "sphinx",
    "pytest",
    "ipykernel",
    "pytest-cov",
    "myst-parser",
    "sphinx-rtd-theme",
]

[tool.poetry.package]
include = ["py.typed"]

[tool.mypy.overrides]
module = "retry_requests.*"
ignore_missing_imports = true
