[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raven"
version = "0.1.0"
description = "Environmental Analysis Platform"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "config",
    "pandas",
    "pytest",
    "fastapi",
    "requests",
    "psycopg2",
    "ipykernel",
    "dateparser",
    "pytest-cov",
    "pip==25.0.1",
    "azure-cosmos",
    "azure-storage-blob",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-mgmt-resource",
    "pandas-stubs",
    "black[jupyter]",
    "types-requests",
    "types-dateparser",
    "requests_cache",
    "retry_requests",
    "openmeteo_requests"
]

[tool.semantic_release]
version_variable = ["src/raven/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["raven"]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "sphinx",
    "pytest",
    "ipykernel",
    "pytest-cov",
    "myst-parser",
    "sphinx-rtd-theme",
]

[tool.poetry.package]
include = ["py.typed"]

[[tool.mypy.overrides]]
module = "retry_requests.*"
ignore_missing_imports = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true